2008-07-02 MIYAJIMA Mitsuharu <miyajima.mitsuharu@anchor.jp>

	* CMD_AS_RANGE was being used inside command strings, and thus
	  not being expanded, fix by dequoting.

2007-06-20 Nicolas Deffayet <nicolas@deffayet.com>

	* vtysh.c: (vtysh_write_terminal) Write 'end' when done,
	  to be consistent with telnet vty, and expected by tools
	  like rancid.

2007-05-01 David L Stevens <dlstevens@us.ibm.com>

	* vtysh/extract.pl.in: added VTYSH_ZEBRA flag for route-map and
	  plist
	* vtysh/Makefile.am: added zebra_routemap.c
	* vtysh/vtysh.h: added VTYSH_ZEBRA flag to VTYSH_RMAP

2007-04-28 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.c: (vtysh_log_timestamp_precision,
	  no_vtysh_log_timestamp_precision) Implement new log timestamp
	  precision commands: send to all daemons.
	  (vtysh_init_vty) Install new log timestamp precision commands.

2007-02-12 Juergen Kammer <j.kammer@eurodata.de>
	* extract.pl: AS4 compatibility for router bgp ASNUMBER
	* extract.pl.in: AS4 compatibility for router bgp ASNUMBER
	* vtysh.c: AS4 compatibility for router bgp ASNUMBER

2006-07-27 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh_main.c: (usage) Add new -d and -E options.  And note that
	  -c can be used multiple times, possibly with embedded linefeeds.
	  (longopts) Add new -d and -E options.
	  (main) Add new -d and -E options, and create a linked list to
	  support multiple -c options.  Do not call vtysh_connect_all until
	  after vtysh_read_config(config_default) and vtysh_auth have
	  succeeded.  This prevents the vtysh.conf file from configuring
	  any daemons, and it ensures that authentication has been passed
	  before we send any commands to any daemons.  Call vtysh_connect_all
	  with any daemon name supplied with -d.  If it is unable to connect
	  to any daemons, issue an error message and exit immediately.
	  When used in -c mode, call vtysh_execute("enable") before
	  executing the commands in order to match interactive behavior. 